Knife tool doesn't render #86335

Closed
opened 2021-03-06 13:56:25 +01:00 by Peter · 15 comments

System Information
Operating system: Mac 10.15.7 (19H2)
Graphics card: Radeon RX 570 8 GB

Blender Version
version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: 02948a2cab, type: Release

Short description of error
Knife tool doesn't render in the viewport. building.blend

Exact steps for others to reproduce the error
Blender file attached which demonstrates the problem. Open file. Select plane. Go to edit mode. Press K. Nothing happens. If you create a similar plane next to it, then knife works.

Btw. knife tool looks like it is working but nothing is rendered.

**System Information** Operating system: Mac 10.15.7 (19H2) Graphics card: Radeon RX 570 8 GB **Blender Version** version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: 02948a2cab44, type: Release **Short description of error** Knife tool doesn't render in the viewport. [building.blend](https://archive.blender.org/developer/F9873073/building.blend) **Exact steps for others to reproduce the error** Blender file attached which demonstrates the problem. Open file. Select plane. Go to edit mode. Press K. Nothing happens. If you create a similar plane next to it, then knife works. Btw. knife tool looks like it is working but nothing is rendered.
Author

Added subscriber: @whoisthis

Added subscriber: @whoisthis
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

@whoisthis , thanks for report . Not sure about your report . But when I try to drag knife on plane , Blender crashes .

@whoisthis , thanks for report . Not sure about your report . But when I try to drag knife on plane , Blender crashes .
Author

Hey @PratikPB2123
Besides what I reported (that the tool's lines are not showing on the plane), similar also happened to me. Blender gets into some infinite cycle, that slows down the entire machine. I have to wait like 20-30sec then the UI becomes responsive again.

Hey @PratikPB2123 Besides what I reported (that the tool's lines are not showing on the plane), similar also happened to me. Blender gets into some infinite cycle, that slows down the entire machine. I have to wait like 20-30sec then the UI becomes responsive again.
Member

Will try tomorrow , need to update blender . Could you try with latest build once https://builder.blender.org/download/ ??

Will try tomorrow , need to update blender . Could you try with latest build once https://builder.blender.org/download/ ??
Author

I just tested with Version 2.93.0 (2.93.0 2021-03-05)
Problem still exists.

I just tested with Version 2.93.0 (2.93.0 2021-03-05) Problem still exists.
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this on the latest 2.93.0 Alpha, branch: master, commit date: 2021-03-08 07:52, hash: 74c50d0c77.

Also seems to leak memory:
Error: Not freed memory blocks: 1, total unfreed memory 0.000023 MB

Note: When loading the default start-up file, the tool seems to be working correctly.

I can confirm this on the latest 2.93.0 Alpha, branch: master, commit date: 2021-03-08 07:52, hash: `74c50d0c77`. Also seems to leak memory: `Error: Not freed memory blocks: 1, total unfreed memory 0.000023 MB` Note: When loading the default start-up file, the tool seems to be working correctly.

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Added subscriber: @ab_stanton

Added subscriber: @ab_stanton

Could you give a description of how you created the plane? It also doesn't respond normally to other edit mode opetaions, so could be a wider bug not contained to knife tool.

The bug causes a crash in the latest master build, but in release it just doesn't work, with no crash.

Could you give a description of how you created the plane? It also doesn't respond normally to other edit mode opetaions, so could be a wider bug not contained to knife tool. The bug causes a crash in the latest master build, but in release it just doesn't work, with no crash.
Author

Please excuse my non-professional wording below, I'm a newbie to Blender. I think I was able to reproduce the problem:

steps:

  • create plane
  • create bezier curve
  • scale and rotate curve so ends of it almost touches the edges of the plane. i used constraints (middle mouse button) so curve is co-planar with the plane.
  • convert curve to mesh
  • join curve and plane meshes
  • select the plane (that is now merged with the curve), go to edit mode (tab)
  • subdivide edges of the plane that are close to the two end of the curve
  • turn on auto merge
  • move end of curves to touch the vertices that was made previous by the subdivision
  • move the new joined vertices a little bit

the resulting blender file is attached, in which case the knife doesn't work on the curve edges only on the plane's original edges. similar effect than the original reported one. building21.blend

system info on which i made the attached file:

System Information
Operating system: Darwin-19.6.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon RX 570 OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.10.18

Blender Version
Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: 02948a2cab

Please excuse my non-professional wording below, I'm a newbie to Blender. I think I was able to reproduce the problem: steps: - create plane - create bezier curve - scale and rotate curve so ends of it almost touches the edges of the plane. i used constraints (middle mouse button) so curve is co-planar with the plane. - convert curve to mesh - join curve and plane meshes - select the plane (that is now merged with the curve), go to edit mode (tab) - subdivide edges of the plane that are close to the two end of the curve - turn on auto merge - move end of curves to touch the vertices that was made previous by the subdivision - move the new joined vertices a little bit the resulting blender file is attached, in which case the knife doesn't work on the curve edges only on the plane's original edges. similar effect than the original reported one. [building21.blend](https://archive.blender.org/developer/F10035181/building21.blend) system info on which i made the attached file: **System Information** Operating system: Darwin-19.6.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon RX 570 OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.10.18 **Blender Version** Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: `02948a2cab`

This issue was referenced by 9f1a409f3a

This issue was referenced by 9f1a409f3acdef770e30bfd04545feb8413f6f2b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2021-04-29 17:42:49 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86335
No description provided.