Fix T86335: Knife tool fails on object with zero scaled axis

Use invert_m4_m4_safe_ortho for the knife tool to support
operating on objects with a single zero scaled axis.